--- a/Source/Info.plist
+++ b/Source/Info.plist
@@ -30,7 +30,7 @@
 					<key>BlockSize</key>
 					<integer>8192</integer>
 					<key>Description</key>
-					<string>Soundflower (2ch)</string>
+					<string>Mixlr (2ch)</string>
 					<key>Formats</key>
 					<array>
 						<dict>
@@ -48,48 +48,6 @@
 							<integer>1</integer>
 							<key>IOAudioStreamNumChannels</key>
 							<integer>2</integer>
-							<key>IOAudioStreamNumericRepresentation</key>
-							<integer>1936289396</integer>
-							<key>IOAudioStreamSampleFormat</key>
-							<integer>1819304813</integer>
-						</dict>
-					</array>
-					<key>NumBlocks</key>
-					<integer>2</integer>
-					<key>NumStreams</key>
-					<integer>1</integer>
-					<key>SampleRates</key>
-					<array>
-						<integer>44100</integer>
-						<integer>48000</integer>
-						<integer>88200</integer>
-						<integer>96000</integer>
-						<integer>176400</integer>
-						<integer>192000</integer>
-					</array>
-				</dict>
-				<dict>
-					<key>BlockSize</key>
-					<integer>8192</integer>
-					<key>Description</key>
-					<string>Soundflower (64ch)</string>
-					<key>Formats</key>
-					<array>
-						<dict>
-							<key>IOAudioStreamAlignment</key>
-							<integer>1</integer>
-							<key>IOAudioStreamBitDepth</key>
-							<integer>32</integer>
-							<key>IOAudioStreamBitWidth</key>
-							<integer>32</integer>
-							<key>IOAudioStreamByteOrder</key>
-							<integer>0</integer>
-							<key>IOAudioStreamDriverTag</key>
-							<integer>0</integer>
-							<key>IOAudioStreamIsMixable</key>
-							<integer>1</integer>
-							<key>IOAudioStreamNumChannels</key>
-							<integer>64</integer>
 							<key>IOAudioStreamNumericRepresentation</key>
 							<integer>1936289396</integer>
 							<key>IOAudioStreamSampleFormat</key>
