Renamed device to Mixlr Connect

--- a/Source/Info.plist
+++ b/Source/Info.plist
@@ -30,7 +30,7 @@
 					<key>BlockSize</key>
 					<integer>8192</integer>
 					<key>Description</key>
-					<string>Mixlr (Virtual Input)</string>
+					<string>Mixlr Connect</string>
 					<key>Formats</key>
 					<array>
 						<dict>
